@@ -128,6 +128,8 @@ Fixes:
  * A missing mail or chat database caused failures in mush startup. Reported
    by Nveid. [SW]
  * Various fixes to update-cnf.pl by Minion.
+ * Setting or clearing the MONITOR flag on rooms caused duplicate messages.
+   Reported by Minion. [SW]
 
 Version 1.8.4 patchlevel 3                                 Mar 18,  2011
 
